--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <script src="arrays.js"></script>
+    <div id="congressionalDistrict"></div>
+    <div id="donationForm"></div>
+    <div id="statements"></div>
+    <div id="events"></div>
+    <div id="volunteers"></div>
+    <div id="biography"></div>
+    <div id="images"></div>
+    <div id="missionStatement"></div>
+    <div id="voterRegistration"></div>
+
+    <!-- <script src="arrays.js"></script> -->
+    <script src="challenge.js"></script>
 </body>
 </html>
